gen/Grammar/delphiParser.java
// Generated from delphi.g4 by ANTLR 4.13.2
package Grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class delphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ABSTRACT=1, AND=2, ARRAY=3, BEGIN=4, BOOLEAN=5, CASE=6, CHAR=7, CHR=8, 
		CONST=9, CONSTRUCTOR=10, CLASS=11, DESTRUCTOR=12, DIV=13, DO=14, DOWNTO=15, 
		ELSE=16, END=17, FILE=18, FOR=19, FUNCTION=20, GOTO=21, IF=22, IN=23, 
		INTEGER=24, LABEL=25, MOD=26, NIL=27, NOT=28, OF=29, OR=30, PACKED=31, 
		PROCEDURE=32, PROGRAM=33, PRIVATE=34, PROTECTED=35, PUBLIC=36, PUBLISHED=37, 
		REAL=38, RECORD=39, REPEAT=40, SEALED=41, SET=42, THEN=43, TO=44, TYPE=45, 
		UNTIL=46, VAR=47, WHILE=48, WITH=49, PLUS=50, MINUS=51, STAR=52, SLASH=53, 
		ASSIGN=54, COMMA=55, SEMI=56, COLON=57, EQUAL=58, NOT_EQUAL=59, LT=60, 
		LE=61, GE=62, GT=63, LPAREN=64, RPAREN=65, LBRACK=66, LBRACK2=67, RBRACK=68, 
		RBRACK2=69, POINTER=70, AT=71, DOT=72, DOTDOT=73, LCURLY=74, RCURLY=75, 
		UNIT=76, INTERFACE=77, USES=78, STRING=79, IMPLEMENTATION=80, TRUE=81, 
		FALSE=82, WS=83, COMMENT_1=84, COMMENT_2=85, IDENT=86, STRING_LITERAL=87, 
		NUM_INT=88, NUM_REAL=89;
	public static final int
		RULE_program = 0, RULE_programHeading = 1, RULE_identifier = 2, RULE_topLevelBlock = 3, 
		RULE_expandedTypeDefinitionPart = 4, RULE_expandedTypeDefinition = 5, 
		RULE_classType = 6, RULE_interfaces = 7, RULE_classDefinition = 8, RULE_primaryFieldDeclarationPart = 9, 
		RULE_memberListPart = 10, RULE_accessSpecifier = 11, RULE_methodPrototype = 12, 
		RULE_procedurePrototype = 13, RULE_constructorPrototype = 14, RULE_destructorPrototype = 15, 
		RULE_functionPrototype = 16, RULE_classFieldDeclarationPart = 17, RULE_interfaceType = 18, 
		RULE_interfaceGuid = 19, RULE_usesUnitsPart = 20, RULE_labelDeclarationPart = 21, 
		RULE_label = 22, RULE_constantDefinitionPart = 23, RULE_constantDefinition = 24, 
		RULE_constantChr = 25, RULE_constant = 26, RULE_unsignedNumber = 27, RULE_unsignedInteger = 28, 
		RULE_unsignedReal = 29, RULE_sign = 30, RULE_bool_ = 31, RULE_string = 32, 
		RULE_typeDefinitionPart = 33, RULE_typeDefinition = 34, RULE_functionType = 35, 
		RULE_procedureType = 36, RULE_type_ = 37, RULE_simpleType = 38, RULE_scalarType = 39, 
		RULE_subrangeType = 40, RULE_typeIdentifier = 41, RULE_structuredType = 42, 
		RULE_unpackedStructuredType = 43, RULE_stringtype = 44, RULE_arrayType = 45, 
		RULE_typeList = 46, RULE_indexType = 47, RULE_componentType = 48, RULE_recordType = 49, 
		RULE_fieldList = 50, RULE_fixedPart = 51, RULE_recordSection = 52, RULE_variantPart = 53, 
		RULE_tag = 54, RULE_variant = 55, RULE_setType = 56, RULE_baseType = 57, 
		RULE_fileType = 58, RULE_pointerType = 59, RULE_variableDeclarationPart = 60, 
		RULE_variableDeclaration = 61, RULE_procedureAndFunctionDeclarationPart = 62, 
		RULE_procedureOrFunctionDeclaration = 63, RULE_block = 64, RULE_procedureDeclaration = 65, 
		RULE_methodProcedureDeclaration = 66, RULE_methodFunctionDeclaration = 67, 
		RULE_constructorDeclaration = 68, RULE_destructorDeclaration = 69, RULE_formalParameterList = 70, 
		RULE_formalParameterSection = 71, RULE_parameterGroup = 72, RULE_identifierList = 73, 
		RULE_constList = 74, RULE_functionDeclaration = 75, RULE_resultType = 76, 
		RULE_statement = 77, RULE_unlabelledStatement = 78, RULE_simpleStatement = 79, 
		RULE_assignmentStatement = 80, RULE_variable = 81, RULE_expression = 82, 
		RULE_relationaloperator = 83, RULE_simpleExpression = 84, RULE_additiveoperator = 85, 
		RULE_term = 86, RULE_multiplicativeoperator = 87, RULE_signedFactor = 88, 
		RULE_factor = 89, RULE_unsignedConstant = 90, RULE_functionDesignator = 91, 
		RULE_parameterList = 92, RULE_set_ = 93, RULE_elementList = 94, RULE_element = 95, 
		RULE_procedureStatement = 96, RULE_actualParameter = 97, RULE_parameterwidth = 98, 
		RULE_gotoStatement = 99, RULE_emptyStatement_ = 100, RULE_empty_ = 101, 
		RULE_structuredStatement = 102, RULE_compoundStatement = 103, RULE_statements = 104, 
		RULE_conditionalStatement = 105, RULE_ifStatement = 106, RULE_caseStatement = 107, 
		RULE_caseListElement = 108, RULE_repetetiveStatement = 109, RULE_whileStatement = 110, 
		RULE_repeatStatement = 111, RULE_forStatement = 112, RULE_forList = 113, 
		RULE_initialValue = 114, RULE_finalValue = 115, RULE_withStatement = 116, 
		RULE_recordVariableList = 117, RULE_methodCall = 118;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeading", "identifier", "topLevelBlock", "expandedTypeDefinitionPart", 
			"expandedTypeDefinition", "classType", "interfaces", "classDefinition", 
			"primaryFieldDeclarationPart", "memberListPart", "accessSpecifier", "methodPrototype", 
			"procedurePrototype", "constructorPrototype", "destructorPrototype", 
			"functionPrototype", "classFieldDeclarationPart", "interfaceType", "interfaceGuid", 
			"usesUnitsPart", "labelDeclarationPart", "label", "constantDefinitionPart", 
			"constantDefinition", "constantChr", "constant", "unsignedNumber", "unsignedInteger", 
			"unsignedReal", "sign", "bool_", "string", "typeDefinitionPart", "typeDefinition", 
			"functionType", "procedureType", "type_", "simpleType", "scalarType", 
			"subrangeType", "typeIdentifier", "structuredType", "unpackedStructuredType", 
			"stringtype", "arrayType", "typeList", "indexType", "componentType", 
			"recordType", "fieldList", "fixedPart", "recordSection", "variantPart", 
			"tag", "variant", "setType", "baseType", "fileType", "pointerType", "variableDeclarationPart", 
			"variableDeclaration", "procedureAndFunctionDeclarationPart", "procedureOrFunctionDeclaration", 
			"block", "procedureDeclaration", "methodProcedureDeclaration", "methodFunctionDeclaration", 
			"constructorDeclaration", "destructorDeclaration", "formalParameterList", 
			"formalParameterSection", "parameterGroup", "identifierList", "constList", 
			"functionDeclaration", "resultType", "statement", "unlabelledStatement", 
			"simpleStatement", "assignmentStatement", "variable", "expression", "relationaloperator", 
			"simpleExpression", "additiveoperator", "term", "multiplicativeoperator", 
			"signedFactor", "factor", "unsignedConstant", "functionDesignator", "parameterList", 
			"set_", "elementList", "element", "procedureStatement", "actualParameter", 
			"parameterwidth", "gotoStatement", "emptyStatement_", "empty_", "structuredStatement", 
			"compoundStatement", "statements", "conditionalStatement", "ifStatement", 
			"caseStatement", "caseListElement", "repetetiveStatement", "whileStatement", 
			"repeatStatement", "forStatement", "forList", "initialValue", "finalValue", 
			"withStatement", "recordVariableList", "methodCall"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ABSTRACT'", "'AND'", "'ARRAY'", "'BEGIN'", "'BOOLEAN'", "'CASE'", 
			"'CHAR'", "'CHR'", "'CONST'", "'CONSTRUCTOR'", "'CLASS'", "'DESTRUCTOR'", 
			"'DIV'", "'DO'", "'DOWNTO'", "'ELSE'", "'END'", "'FILE'", "'FOR'", "'FUNCTION'", 
			"'GOTO'", "'IF'", "'IN'", "'INTEGER'", "'LABEL'", "'MOD'", "'NIL'", "'NOT'", 
			"'OF'", "'OR'", "'PACKED'", "'PROCEDURE'", "'PROGRAM'", "'PRIVATE'", 
			"'PROTECTED'", "'PUBLIC'", "'PUBLISHED'", "'REAL'", "'RECORD'", "'REPEAT'", 
			"'SEALED'", "'SET'", "'THEN'", "'TO'", "'TYPE'", "'UNTIL'", "'VAR'", 
			"'WHILE'", "'WITH'", "'+'", "'-'", "'*'", "'/'", "':='", "','", "';'", 
			"':'", "'='", "'<>'", "'<'", "'<='", "'>='", "'>'", "'('", "')'", "'['", 
			"'(.'", "']'", "'.)'", "'^'", "'@'", "'.'", "'..'", "'{'", "'}'", "'UNIT'", 
			"'INTERFACE'", "'USES'", "'STRING'", "'IMPLEMENTATION'", "'TRUE'", "'FALSE'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ABSTRACT", "AND", "ARRAY", "BEGIN", "BOOLEAN", "CASE", "CHAR", 
			"CHR", "CONST", "CONSTRUCTOR", "CLASS", "DESTRUCTOR", "DIV", "DO", "DOWNTO", 
			"ELSE", "END", "FILE", "FOR", "FUNCTION", "GOTO", "IF", "IN", "INTEGER", 
			"LABEL", "MOD", "NIL", "NOT", "OF", "OR", "PACKED", "PROCEDURE", "PROGRAM", 
			"PRIVATE", "PROTECTED", "PUBLIC", "PUBLISHED", "REAL", "RECORD", "REPEAT", 
			"SEALED", "SET", "THEN", "TO", "TYPE", "UNTIL", "VAR", "WHILE", "WITH", 
			"PLUS", "MINUS", "STAR", "SLASH", "ASSIGN", "COMMA", "SEMI", "COLON", 
			"EQUAL", "NOT_EQUAL", "LT", "LE", "GE", "GT", "LPAREN", "RPAREN", "LBRACK", 
			"LBRACK2", "RBRACK", "RBRACK2", "POINTER", "AT", "DOT", "DOTDOT", "LCURLY", 
			"RCURLY", "UNIT", "INTERFACE", "USES", "STRING", "IMPLEMENTATION", "TRUE", 
			"FALSE", "WS", "COMMENT_1", "COMMENT_2", "IDENT", "STRING_LITERAL", "NUM_INT", 
			"NUM_REAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public delphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public TopLevelBlockContext topLevelBlock() {
			return getRuleContext(TopLevelBlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(delphiParser.DOT, 0); }
		public TerminalNode EOF() { return getToken(delphiParser.EOF, 0); }
		public TerminalNode INTERFACE() { return getToken(delphiParser.INTERFACE, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(238);
			programHeading();
			setState(240);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INTERFACE) {
				{
				setState(239);
				match(INTERFACE);
				}
			}

			setState(242);
			topLevelBlock();
			setState(243);
			match(DOT);
			setState(244);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramHeadingContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(delphiParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public TerminalNode LPAREN() { return getToken(delphiParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(delphiParser.RPAREN, 0); }
		public TerminalNode UNIT() { return getToken(delphiParser.UNIT, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProgramHeading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProgramHeading(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProgramHeading(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeading);
		int _la;
		try {
			setState(260);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PROGRAM:
				enterOuterAlt(_localctx, 1);
				{
				setState(246);
				match(PROGRAM);
				setState(247);
				identifier();
				setState(252);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(248);
					match(LPAREN);
					setState(249);
					identifierList();
					setState(250);
					match(RPAREN);
					}
				}

				setState(254);
				match(SEMI);
				}
				break;
			case UNIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(256);
				match(UNIT);
				setState(257);
				identifier();
				setState(258);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(delphiParser.IDENT, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(262);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
